[package]
name = "engine-input-producers"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "Rust input-derived producer artifacts for CSS Module Explainer EngineInputV2"
repository = "https://github.com/yongsk0066/css-module-explainer"
readme = "README.md"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
