[package]
name = "omena-engine-input-producers"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Input-derived producer artifacts for Omena CSS semantic analysis"
repository = "https://github.com/omenien/omena-engine-input-producers"
readme = "README.md"
keywords = ["omena", "css-modules", "analysis", "semantics"]
categories = ["development-tools"]
exclude = [".github/**"]

[lib]
name = "engine_input_producers"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[dependencies]
omena-abstract-value = { git = "https://github.com/omenien/omena-abstract-value.git", rev = "943ff5c" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
